@fernanda-reis [implementação crud de usuario]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost/${db_name}?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false&allowPublicKeyRetrieval=true
+spring.datasource.username=${db_username}
+spring.datasource.password=${db_password}
+spring.jpa.show-sql=true
 
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=Brazil/East
