atualização das pastas

--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,11 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-		
+		 <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>1.6.8</version>
+   </dependency>
 		
 	</dependencies>
 
