--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost/${db_name}?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://${db_uri}/${db_name}?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false&allowPublicKeyRetrieval=true
 spring.datasource.username=${db_username}
 spring.datasource.password=${db_password}
 spring.jpa.show-sql=true
 
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Brazil/East
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.use-root-path=true
+springdoc.packagesToScan=com.equipe36.provihack.controller
